--- a/result/2022-06-22.md
+++ b/result/2022-06-22.md
@@ -43,3 +43,6 @@
 43. [动画折枝有多绝](https://s.weibo.com//weibo?q=%23%E5%8A%A8%E7%94%BB%E6%8A%98%E6%9E%9D%E6%9C%89%E5%A4%9A%E7%BB%9D%23&Refer=top) 129177
 44. [想看许昕打球了](https://s.weibo.com//weibo?q=%23%E6%83%B3%E7%9C%8B%E8%AE%B8%E6%98%95%E6%89%93%E7%90%83%E4%BA%86%23&Refer=top) 116590
 45. [男子自学按摩致66岁老人死亡](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E8%87%AA%E5%AD%A6%E6%8C%89%E6%91%A9%E8%87%B466%E5%B2%81%E8%80%81%E4%BA%BA%E6%AD%BB%E4%BA%A1%23&Refer=top) 92423
+46. [孙怡不愧是我的互联网嘴替](https://s.weibo.com//weibo?q=%23%E5%AD%99%E6%80%A1%E4%B8%8D%E6%84%A7%E6%98%AF%E6%88%91%E7%9A%84%E4%BA%92%E8%81%94%E7%BD%91%E5%98%B4%E6%9B%BF%23&Refer=top) 67006
+47. [85条河流发生超警以上洪水](https://s.weibo.com//weibo?q=%2385%E6%9D%A1%E6%B2%B3%E6%B5%81%E5%8F%91%E7%94%9F%E8%B6%85%E8%AD%A6%E4%BB%A5%E4%B8%8A%E6%B4%AA%E6%B0%B4%23&Refer=top) 40947
+48. [总算把夏天的快乐玩明白了](https://s.weibo.com//weibo?q=%23%E6%80%BB%E7%AE%97%E6%8A%8A%E5%A4%8F%E5%A4%A9%E7%9A%84%E5%BF%AB%E4%B9%90%E7%8E%A9%E6%98%8E%E7%99%BD%E4%BA%86%23&Refer=top) 35686
